# App-Builder

./: .gitignore  .sample_env  README.md  main.py  pyproject.toml
agent/: graph.py  prompts.py  states.py  tools.py
pre-generated-projects/calculator/: calculator.js  index.html  styles.css
pre-generated-projects/todo-list/: README.md  app.js  index.html  styles.css
